--- a/annotation.conf
+++ b/annotation.conf
@@ -12,6 +12,8 @@ SummaryandConclusions
 [events]
 [attributes]
 
+Date Arg:<ENTITY>, Value:<ENTITY>
+Dose Arg:<ENTITY>, Value:<ENTITY>
 Extent Arg:<ENTITY>, Value:<ENTITY>
 Frequency Arg:<ENTITY>, Value:<ENTITY>
 Location Arg:<ENTITY>, Value:<ENTITY>
@@ -23,19 +25,18 @@ Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|Border
 Side Arg:<ENTITY>, Value:Left|Right
 Type Arg:<ENTITY>, Value:<ENTITY>
 
-
-HuwIgnore Arg:Identifiers, Value:Test|test123
+PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber|Gender
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
 DayDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
 MonthDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12
 YearDate Arg:Identifiers, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities|HeartFailure|DilatedCardiomyopathy
+Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
 Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
-Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Dislepidaemia|Atherosclerosis|InsulinResistance|AgeMen>55|AgeWomen>65||Diabetes|DiabetesTypeI|DiabetesTypeII
+Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy|AgeMen>55|AgeWomen>65
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
-Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi
+Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|Thallium
 StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
 TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
@@ -62,16 +63,15 @@ SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|Mi
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalities|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|Hypokinesia|Dyskinesia|Mild|Moderate|ModerateToSevere|Severe
+SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
-EjectionFraction Arg:GlobalSystolicFunction, Value:AtRest|PostStress
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:StressEF%|RestEF%|Normal|MildImpairment|ModerateImpairment|SevereImpairment|<ENTITY>
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
 Perfusion Arg:SummaryandConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-Severity Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments|<ENTITY>
+SeverityofAbnormalities Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
 Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
 LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
-Recommendations Arg:SummaryandConclusions, Value:MedicalManagement|InvasiveManagementIfFailureOfMedicalManagement|InvasiveManagement|FurtherInvestigationsRecommended|FollowUpIfAnyClinicalChanges|UnderObservation
+Recommendations Arg:SummaryandConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
